[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TumSeg"
version = "1.0"
description = "Segmentation of subcutaneous tumors in mice CT scans"
authors = [
    {name = "Cluster for Molecular Imaging"}
]
requires-python = "~=3.9"
dependencies = [
    "torch==2.0.0",
    "torchvision==0.15.1",
    "torchio==0.18.90",
    "statsmodels==0.14.0",
    "nibabel==5.1.0",
    "joblib==1.2.0",
    "scipy==1.10.0",
    "numpy==1.23.5",
    "matplotlib==3.7.1",
    "scikit-learn==1.2.2",
]
[tool.setuptools]
packages = ["unet3d"]
[project.urls]
Homepage = "https://github.com/KjaerLab/TumSeg"